@@ -305,9 +305,7 @@ void oprof_start::read_set_events()
 	op_event_descr const * noevent = &locate_event("No event");
 	current_events_t::const_iterator cit = current_events.begin();
 	current_events_t::const_iterator end = current_events.end();
-	cerr << "noev" << noevent << endl;
 	for (; cit != end; ++cit) {
-		cerr << "*cit" << *cit << endl;
 		if (*cit != noevent)
 			return;
 	}
@@ -423,8 +421,13 @@ void oprof_start::counter_selected(int ctr)
 		events_list->ensureItemVisible(theitem);
 	}
 
-	if (!has_unique_event(cpu_type))
-		new QListViewItem(events_list, "No event");
+	if (!has_unique_event(cpu_type)) {
+		QListViewItem * i = new QListViewItem(events_list, "No event");
+		if (current_events[ctr]->name == "No event") {
+			events_list->setCurrentItem(i);
+			events_list->ensureItemVisible(i);
+		}
+	}
 
 	setUpdatesEnabled(true);
 	update();
